# PEA3

./: AtspGraph.cpp  AtspGraph.h  CMakeLists.txt  GeneticAlgorithm.cpp  GeneticAlgorithm.h  TabuSearch.cpp  TabuSearch.h  Timer.h  main.cpp  wyniki_3_0_rozmiar.csv  wyniki_3_5_populacja.csv  wyniki_3_5_start.csv  wyniki_4_0_mutacja.csv  wyniki_4_5_krzyzowanie.csv  wyniki_4_5_parametry.csv  wyniki_5_0_aspiracja.csv  wyniki_5_0_selekcja.csv
